Fixed contrast issue

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img {
 }
 .whatToWatch {
     background-color: slateblue;
-    color: rgb(75, 2, 75);
+    color: white;
 }
 .bg-white {
     box-shadow: 0px 10px 5px rgb(215, 120, 215);;
